# query-recommender

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
docs/: index.md  mkdocs.yml
qr_api/: main.py
qr_api/resources/: data_models.py  endpoints.py
qr_api/tests/: sample_query.json  sample_query_2.json  sample_query_3.json  user1_profile.json  user2_profile.json  user3_profile.json  user4_profile.json  user_profile_template.json
v0.0/: 404.html  index.html  sitemap.xml
v0.0/api-overview/: index.html
v0.0/content/: openapi.json
v0.0/error-codes/: index.html
v0.0/openapi/: index.html
v0.0/search/: search_index.json
