[project]
name = "qr_api"
version = "0.0.3"
description = "Query Recommender API (WP4)"
authors = [{ name = "Niccolò Marastoni", email = "niccolo.marastoni@univr.it" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duckdb>=1.3.1",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "networkx>=3.2.1",
    "pandas>=2.3.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["qr_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
